# llm_model

embeddings/: pyproject.toml
embeddings/src/: embeds.py  extract_from_zip.py  query.py  rag_vs_web.py
